--- a/src/ToDoList.Infra/ToDoList.Infra.Ioc/ToDoList.Infra.IoC.csproj
+++ b/src/ToDoList.Infra/ToDoList.Infra.Ioc/ToDoList.Infra.IoC.csproj
@@ -6,6 +6,10 @@
     <ProjectReference Include="..\ToDoList.Infra.Data\ToDoList.Infra.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.13" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
