--- a/src/ToDoList.Infra/ToDoList.Infra.Ioc/ToDoList.Infra.IoC.csproj
+++ b/src/ToDoList.Infra/ToDoList.Infra.Ioc/ToDoList.Infra.IoC.csproj
@@ -7,6 +7,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.13" />
   </ItemGroup>
 
